[gd_scene load_steps=19 format=3 uid="uid://b4jse46773qbx"]

[ext_resource type="Script" uid="uid://c2q51pdj4pbfg" path="res://scenes/game_handler.gd" id="1_dutkj"]
[ext_resource type="Texture2D" uid="uid://bd3isyy1qh26w" path="res://art/normal/board.png" id="2_0i4ec"]
[ext_resource type="Texture2D" uid="uid://bqpf38lhkrx0b" path="res://art/normal/numbers.png" id="3_r6qku"]
[ext_resource type="Texture2D" uid="uid://cibp8l7vurdiv" path="res://art/normal/text.png" id="4_om3o7"]
[ext_resource type="Texture2D" uid="uid://df6ed1p08kdar" path="res://art/normal/black_focus.png" id="5_t1phu"]
[ext_resource type="Texture2D" uid="uid://djde684knobld" path="res://art/gray_overlay.png" id="6_r6qku"]
[ext_resource type="PackedScene" uid="uid://u4jqkop00ts" path="res://scenes/white_pieces.tscn" id="7_0i4ec"]
[ext_resource type="PackedScene" uid="uid://dd2542srac5ec" path="res://scenes/black_pieces.tscn" id="8_t1phu"]
[ext_resource type="PackedScene" uid="uid://3uc7awp7bdbe" path="res://scenes/gui.tscn" id="12_qxcqc"]
[ext_resource type="PackedScene" uid="uid://c8luj67t7wp0f" path="res://scenes/shop.tscn" id="13_0i4ec"]
[ext_resource type="Texture2D" uid="uid://1q84bpcfn4iq" path="res://art/normal/danger.png" id="13_q44q8"]
[ext_resource type="PackedScene" uid="uid://cr5idws0oiiqh" path="res://scenes/inventory.tscn" id="15_7ciag"]
[ext_resource type="FontFile" uid="uid://knux3gtftdqa" path="res://small_pixel.ttf" id="15_xt3ml"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_om3o7"]
texture = ExtResource("6_r6qku")
texture_region_size = Vector2i(22, 22)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_25ov6"]
tile_size = Vector2i(22, 22)
sources/0 = SubResource("TileSetAtlasSource_om3o7")

[sub_resource type="Animation" id="Animation_ihpyp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.51, 1, 0.518167, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(97.5, 78.5)]
}

[sub_resource type="Animation" id="Animation_q44q8"]
resource_name = "turn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.766667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.51, 0.51, 0), Color(1, 0.51, 0.51, 1), Color(1, 0.51, 0.51, 1), Color(1, 0.51, 0.51, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.466667, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 78.5), Vector2(0, 88.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cggay"]
_data = {
&"RESET": SubResource("Animation_ihpyp"),
&"turn": SubResource("Animation_q44q8")
}

[node name="GameHandler" type="Node2D" groups=["GameHandler"]]
script = ExtResource("1_dutkj")

[node name="BackGround" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="BackGround"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="p1inv" parent="CanvasLayer" instance=ExtResource("15_7ciag")]
offset_left = -160.0
offset_top = -90.0
offset_right = -160.0
offset_bottom = -90.0

[node name="p2inv" parent="CanvasLayer" instance=ExtResource("15_7ciag")]
offset_left = -160.0
offset_top = 90.0
offset_right = -160.0
offset_bottom = 90.0
scale = Vector2(1, -1)

[node name="Camera2D" type="Camera2D" parent="CanvasLayer"]

[node name="Board" type="Sprite2D" parent="CanvasLayer"]
texture = ExtResource("2_0i4ec")

[node name="Numbers" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(95, 0)
texture = ExtResource("3_r6qku")

[node name="Text" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(-1, 96)
texture = ExtResource("4_om3o7")

[node name="BlackFocus" type="Sprite2D" parent="CanvasLayer"]
visible = false
z_index = 3
texture = ExtResource("5_t1phu")

[node name="WhitePieces" parent="CanvasLayer" instance=ExtResource("7_0i4ec")]

[node name="BlackPieces" parent="CanvasLayer" instance=ExtResource("8_t1phu")]

[node name="Obstacles" type="TileMapLayer" parent="CanvasLayer"]
visible = false
tile_set = SubResource("TileSet_25ov6")

[node name="Overlays" type="Node2D" parent="CanvasLayer"]

[node name="Coins" type="Node2D" parent="CanvasLayer"]

[node name="0" type="Marker2D" parent="CanvasLayer"]
position = Vector2(-256, 256)

[node name="1" type="Marker2D" parent="CanvasLayer"]
position = Vector2(-256, -256)

[node name="Marker" type="Sprite2D" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.635294)
texture = ExtResource("13_q44q8")

[node name="Fixed" type="CanvasLayer" parent="."]

[node name="GUI" parent="Fixed" instance=ExtResource("12_qxcqc")]

[node name="Shop" parent="Fixed" instance=ExtResource("13_0i4ec")]

[node name="MainPlayer" type="Label" parent="Fixed"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -42.0
offset_right = 41.0
offset_bottom = -26.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("15_xt3ml")
text = "eeee"

[node name="SecondaryPlayer" type="Label" parent="Fixed"]
anchors_preset = -1
anchor_top = -0.0333333
anchor_bottom = -0.0333333
offset_left = 2.0
offset_top = 32.0
offset_right = 42.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("15_xt3ml")
text = "eeee"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="Fixed"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -31.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "QUIT"

[node name="Rematch" type="Button" parent="Fixed"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -31.0
offset_right = 73.0
grow_horizontal = 2
grow_vertical = 0
text = "REMATCH"

[node name="Label" type="Label" parent="Fixed/Rematch"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 23.0
offset_top = -23.0
offset_right = 63.0
text = "0/2"

[node name="Turn" type="Label" parent="Fixed"]
modulate = Color(0.51, 1, 0.518167, 0)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 97.5
offset_top = -11.5
offset_right = 222.5
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("15_xt3ml")
theme_override_font_sizes/font_size = 20
text = "your turn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fixed"]
libraries = {
&"": SubResource("AnimationLibrary_cggay")
}

[connection signal="moved" from="CanvasLayer/WhitePieces/Pawn" to="CanvasLayer/WhitePieces/Pawn" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21977" to="CanvasLayer/WhitePieces/@Node2D@21977" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21978" to="CanvasLayer/WhitePieces/@Node2D@21978" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/Rook" to="CanvasLayer/WhitePieces/Rook" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21979" to="CanvasLayer/WhitePieces/@Node2D@21979" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21980" to="CanvasLayer/WhitePieces/@Node2D@21980" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/King" to="CanvasLayer/WhitePieces/King" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21981" to="CanvasLayer/WhitePieces/@Node2D@21981" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21982" to="CanvasLayer/WhitePieces/@Node2D@21982" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21983" to="CanvasLayer/WhitePieces/@Node2D@21983" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/WhitePieces/@Node2D@21984" to="CanvasLayer/WhitePieces/@Node2D@21984" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/King" to="CanvasLayer/BlackPieces/King" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/Rook" to="CanvasLayer/BlackPieces/Rook" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21987" to="CanvasLayer/BlackPieces/@Node2D@21987" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/Pawn" to="CanvasLayer/BlackPieces/Pawn" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21988" to="CanvasLayer/BlackPieces/@Node2D@21988" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21989" to="CanvasLayer/BlackPieces/@Node2D@21989" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21990" to="CanvasLayer/BlackPieces/@Node2D@21990" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21991" to="CanvasLayer/BlackPieces/@Node2D@21991" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21992" to="CanvasLayer/BlackPieces/@Node2D@21992" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21993" to="CanvasLayer/BlackPieces/@Node2D@21993" method="_on_moved"]
[connection signal="moved" from="CanvasLayer/BlackPieces/@Node2D@21996" to="CanvasLayer/BlackPieces/@Node2D@21996" method="_on_moved"]
[connection signal="pressed" from="Fixed/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Fixed/Rematch" to="." method="_on_rematch_pressed"]
